--- a/native_library/android/FirebaseANE/DynamicLinks/src/main/res/values/strings.xml
+++ b/native_library/android/FirebaseANE/DynamicLinks/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">DynamicLinksANEs</string>
+    <string name="app_name">DynamicLinksANE</string>
 </resources>
