--- a/native_extension/VisionANE/ane/docs/packages.dita
+++ b/native_extension/VisionANE/ane/docs/packages.dita
@@ -1,1 +1,1 @@
-<?xml version="1.0" encoding="UTF-8"?><apiMap><apiItemRef href="com.tuarua.fre.xml"/><apiItemRef href="com.tuarua.firebase.xml"><apiItemRef href="com.tuarua.firebase.vision.xml"/><apiItemRef href="com.tuarua.firebase.permissions.xml"/></apiItemRef></apiMap>
+<?xml version="1.0" encoding="UTF-8"?><apiMap><apiItemRef href="com.tuarua.fre.xml"/><apiItemRef href="com.tuarua.firebase.xml"><apiItemRef href="com.tuarua.firebase.vision.xml"/><apiItemRef href="com.tuarua.firebase.permissions.xml"/><apiItemRef href="com.tuarua.firebase.vision.display.xml"/></apiItemRef></apiMap>
