--- a/native_extension/ane/docs/packages.dita
+++ b/native_extension/ane/docs/packages.dita
@@ -1,1 +1,1 @@
-<?xml version="1.0" encoding="UTF-8"?><apiMap><apiItemRef href="com.tuarua.xml"><apiItemRef href="com.tuarua.fre.xml"/><apiItemRef href="com.tuarua.firebase.xml"/></apiItemRef></apiMap>
+<?xml version="1.0" encoding="UTF-8"?><apiMap><apiItemRef href="com.tuarua.xml"><apiItemRef href="com.tuarua.fre.xml"/><apiItemRef href="com.tuarua.firebase.xml"/><apiItemRef href="com.tuarua.firebase.auth.xml"/><apiItemRef href="com.tuarua.firebase.storage.xml"/><apiItemRef href="com.tuarua.firebase.analytics.xml"/><apiItemRef href="com.tuarua.firebase.firestore.xml"/><apiItemRef href="com.tuarua.firebase.messaging.xml"/><apiItemRef href="com.tuarua.firebase.dynamiclinks.xml"/><apiItemRef href="com.tuarua.firebase.remoteconfig.xml"/><apiItemRef href="com.tuarua.firebase.ml.vision.text.xml"/><apiItemRef href="com.tuarua.firebase.storage.events.xml"/><apiItemRef href="com.tuarua.firebase.ml.vision.cloud.xml"/><apiItemRef href="com.tuarua.firebase.ml.vision.label.xml"/><apiItemRef href="com.tuarua.firebase.messaging.events.xml"/><apiItemRef href="com.tuarua.firebase.ml.vision.common.xml"/><apiItemRef href="com.tuarua.firebase.remoteconfig.events.xml"/></apiItemRef></apiMap>
